[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptbench"
version = "0.1.0"
description = "CLI utility to benchmark LLMs with different prompts"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "GorkaEgor4kas", email = "gorkaegor4kas@gmail.com"}
]

dependencies = [
    #CLI
    "typer>=0.12",
    "rich>=13.0",

    # Validation & config
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",

    # Async HTTP
    "httpx>=0.27",

    # LLM API
    "openai>=1.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
promptbench = "promptbench.main:app"

[tool.setuptools.packages.find]
include = ["promptbench*"]

